# bilibili_live_tool

./: Cargo.toml
.github/workflows/: release.yml
scripts/: RELEASE.md  release.nu  release.ps1  release.sh
src/: auth.rs  bullet.rs  client.rs  config.rs  error.rs  lib.rs  live.rs  main.rs  qr.rs  sign.rs  tui.rs
